--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,17 +62,18 @@
             android:background="@drawable/edit"
             android:padding="20dp"
             android:autofillHints="" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/forget_password"
-            android:textColor="@color/akgecyellow"
-            android:fontFamily="sans-serif-medium"
             android:layout_gravity="right"
             android:layout_marginTop="20dp"
-            android:textSize="15sp"
             android:layout_marginRight="35dp"
-            tools:ignore="RtlHardcoded" />
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/forget_password"
+            android:textColor="@color/akgecyellow"
+            android:textSize="15sp"
+            tools:ignore="RtlHardcoded,TextContrastCheck" />
         <Button
             android:id="@+id/login_button"
             android:layout_width="300dp"
