--- a/app/src/main/res/layout/activity_update_teacher.xml
+++ b/app/src/main/res/layout/activity_update_teacher.xml
@@ -23,11 +23,12 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/updateTeacherName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/name"
             android:inputType="text"
-            android:id="@+id/updateTeacherName"/>
+            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -38,11 +39,12 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/updateTeacherPost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/postname"
             android:inputType="text"
-            android:id="@+id/updateTeacherPost"/>
+            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,11 +55,12 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/updateTeacherEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/email"
             android:inputType="text"
-            android:id="@+id/updateTeacherEmail"/>
+            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -75,7 +78,8 @@
             android:text="@string/update"
             android:textAllCaps="false"
             android:layout_marginEnd="8dp"
-            android:id="@+id/updateTeacherBtn"/>
+            android:id="@+id/updateTeacherBtn"
+            tools:ignore="VisualLintButtonSize" />
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="0dp"
@@ -84,7 +88,8 @@
             android:text="@string/delete"
             android:textAllCaps="false"
             android:layout_marginStart="8dp"
-            android:id="@+id/deleteTeacherBtn"/>
+            android:id="@+id/deleteTeacherBtn"
+            tools:ignore="VisualLintButtonSize" />
 
 
     </LinearLayout>
