--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,21 +1,12 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.AKGECfaculty" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <!--     <item name="colorPrimary">@color/purple_200</item>
-                <item name="colorPrimaryVariant">@color/purple_700</item>
-                <item name="colorOnPrimary">@color/black</item> -->
-        <!-- Secondary brand color. -->
-        <!--     <item name="colorSecondary">@color/teal_200</item>
-                <item name="colorSecondaryVariant">@color/teal_200</item>
-                <item name="colorOnSecondary">@color/black</item>   -->
-        <!-- Status bar color. -->
-        <!--
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-         -->
-        <!-- Customize your theme here. -->
+        <!-- Customize your dark theme here. -->
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
